Use correct dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./ubuntu
+          context: "{{defaultContext}}:ubuntu"
           push: true
           tags: marcvdm/ubuntu:latest
