--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,4 +1,6 @@
 FROM ubuntu:latest
 
 RUN apt-get update
-RUN apt-get install -y git dpkg-dev curl sudo zip
+RUN apt-get install -y git dpkg-dev curl sudo zip bash python3 python3-pip
+
+RUN pip3 install awscli
