--- a/ubuntu-focal/Dockerfile
+++ b/ubuntu-focal/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:focal
 
-RUN apt-get update && apt-get install -y git dpkg-dev curl sudo zip bash python3 python3-pip --no-install-recommends
+RUN apt-get update && apt-get install -y git dpkg-dev curl sudo zip bash python3 python3-pip openssh-client --no-install-recommends
 
 RUN pip3 install awscli
