--- a/ubuntu-focal/Dockerfile
+++ b/ubuntu-focal/Dockerfile
@@ -1,7 +1,6 @@
 FROM setupphp/node:focal
 
 RUN set -ex \
-    && apt-get update && apt-get install -y git dpkg-dev zip python3 python3-pip openssh-client --no-install-recommends \
+    && apt-get update && apt-get install -y dpkg-dev zip python3 python3-pip --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
-    && pip3 install awscli \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false
+    && pip3 install awscli
