--- a/ubuntu-jammy/Dockerfile
+++ b/ubuntu-jammy/Dockerfile
@@ -1,6 +1,6 @@
 FROM setupphp/node:jammy
 
 RUN set -ex \
-    && apt-get update && apt-get install -y dpkg-dev zip python3 python3-pip --no-install-recommends \
+    && apt-get update && apt-get install -y git openssh-client dpkg-dev zip python3 python3-pip --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && pip3 install awscli
