--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ focal, jammy ]
+        version: [ focal, jammy , symfony-panther ]
     steps:
       -
         name: Set up QEMU
