--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        version: [ jammy , symfony-panther, ubuntu-php-8.3 ]
+        version: [symfony-panther, php-8.3, php-8.1 ]
     steps:
       -
         name: Set up QEMU
