--- a/ubuntu-test-environment/Dockerfile
+++ b/ubuntu-test-environment/Dockerfile
@@ -30,7 +30,7 @@ RUN apt install --no-install-recommends --yes  php8.4-cli php8.4-fpm php8.4-comm
 RUN apt install --no-install-recommends --yes  php8.5-cli php8.5-fpm php8.5-common php8.5-bcmath php8.5-curl php8.5-imagick php8.5-mbstring php8.5-pdo-mysql php8.5-sqlite3 php8.5-zip php8.5-amqp php8.5-gd php8.5-redis php8.5-soap php8.5-xml php8.5-intl php8.5-dom
 
 #Install AWSCLI
-RUN pip3 install awscli
+RUN pip3 install awscli --break-system-packages
 
 #Install NodeJS
 RUN curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash - && sudo apt-get install -y nodejs
